--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Автоматический анализ кода в реальном времени прямо в GitLab">
+  <meta name="Keywords" content="Code Review, анализ, код, LLM, AI, ИИ, Flexberry, IT, автоматизация, GitLab">
   <title>Flexberry AI Code Reviewer</title>
   <link rel="icon" type="image/ico" href="assets/img/favicon.ico">
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
@@ -12,31 +14,30 @@
 </head>
 
 <body>
-  <nav class="navbar bg-white sticky-top header">
-    <div class="container">
-      <img src="assets/img/logo-black.svg" alt="AI Assistant" height="40" class="pb-2 pb-lg-0">
-      <div class="btn-group" role="group">
-        <button class="btn mr-2 start-btn px-3" data-toggle="modal" data-target="#send-modal1">Демо</button>
-        <button class="btn header-btn px-3" data-toggle="modal" data-target="#send-modal">Купить</button>
+  <header>
+    <nav class="navbar bg-white sticky-top header">
+      <div class="container">
+        <img src="assets/img/logo-black.svg" alt="AI Assistant" height="40" class="pb-2 pb-lg-0">
+        <div class="btn-group" role="group">
+          <button class="btn mr-2 start-btn px-3" data-toggle="modal" data-target="#send-modal1">Демо</button>
+          <button class="btn header-btn px-3" data-toggle="modal" data-target="#send-modal">Купить</button>
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
 
   <!-- Главный блок -->
-  <section class="gradient-box py-lg-5 py-4">
+  <section class="main">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 text-md-left text-center">
-          <div class="pb-4">
-            <img src="assets/img/logo.svg" alt="AI Code Reviewer" class="img-fluid">
-          </div>
-          <h1>AI Code Reviewer для GitLab — автоматический анализ кода в реальном времени прямо в GitLab.</h1>
-          <p class="mt-3">Мгновенно оценивает каждую правку, выявляет ошибки и предлагает улучшения, экономя
-            часы работы команды.</p>
+        <div class="col-lg-6 ">
+          <img src="assets/img/logo.svg" alt="AI Code Reviewer" class="img-fluid pb-5">
+          <h1>AI Code Reviewer для GitLab — автоматический анализ кода в реальном времени прямо в GitLab</h1>
+          <p class="mt-3">Мгновенно оценивает каждую правку, выявляет ошибки и предлагает улучшения, экономя часы работы команды</p>
           <button class="btn start-btn px-3 mr-3" data-toggle="modal" data-target="#send-modal1">Демо</button>
           <button class="btn btn-gradient px-3" data-toggle="modal" data-target="#send-modal">Купить</button>
         </div>
-        <div class="col-md-6">
+        <div class="col-lg-6">
           <img src="assets/img/reviewer.png" alt="Demo AI Code Reviewer" width="100%">
         </div>
       </div>
@@ -48,9 +49,7 @@
     <div class="container">
       <div class="row d-flex align-items-center mb-5">
         <h2 class="text-lg-right col-lg-6 col-12">Как AI Code Reviewer анализирует код</h2>
-        <p class="border-left text-left col-lg-4 col-12">Мы используем подход на основе больших языковых моделей (LLM),
-          которые способны анализировать код с учётом контекста и находить потенциальные ошибки. Система интегрируется с GitLab
-          и запускается при каждом изменении кода.</p>
+        <p class="border-left text-left col-lg-4 col-12">Большие языковые модели (LLM) анализируют код в контексте, обнаруживая возможные ошибки. Решение интегрировано с GitLab и запускается автоматически для каждого изменения.</p>
       </div>
       <div class="row">
         <div class="col-md-4 mb-3">
